--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-ga4": "^2.1.0",
+    "react-modal": "^3.16.1",
+    "react-player": "^2.14.1"
   },
   "devDependencies": {
     "eslint": "^8",
